#42 fix overflow for windows

--- a/src/components/Schedule/Schedule.less
+++ b/src/components/Schedule/Schedule.less
@@ -62,6 +62,9 @@
       cursor: pointer;
     }
   }
+  p {
+    text-indent: 30px;
+  }
   .one, .two {
     height: 100%;
     h4 {
@@ -86,6 +89,12 @@
       pointer-events: none;
       border-width: 5px;
       margin-top: 20px;
+    }
+    p {
+      display: none;
+    }
+    p:first-child {
+      display: block;
     }
   }
   .one {
@@ -257,7 +266,7 @@
       .descrip {
         padding: 20px 20px;
         width: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
         .pos {
           text-align: left;
           color: #989898;
