--- a/src/components/Speaker/Speaker.less
+++ b/src/components/Speaker/Speaker.less
@@ -112,7 +112,6 @@
   .speaker-box {
     position: fixed;
     width: 500px;
-    height: 600px;
     top: 0px;
     z-index: 2000;
     left: 50%;
@@ -151,8 +150,8 @@
     .descrip {
       padding: 20px 50px;
       width: 100%;
-      height: 330px;
-      overflow-y: scroll;
+      height: 350px;
+      overflow-y: auto;
     }
   }
   @media (max-width:767px) {
